--- a/Books/Производительность_систем.md
+++ b/Books/Производительность_систем.md
@@ -1,1 +1,18 @@
-1.
+# 1. Производительность системы
+
+Если у вас нет схемы вашего окружения, отражающей путь к данным, найдите ее или нарисуйте сами; она поможет увидеть взаимосвязи между компонентами и не упустить из виду целые области.
+
+Типичная цель оценки производительности системы — улучшить взаимодействие с конечным пользователем за счет уменьшения задержек и снижения затрат на вычисления. Снижения затрат можно достигнуть за счет устранения неэффективности, повышения пропускной способности и общей настройки системы.
+
+Анализ и увеличение производительности системы предполагают выполнение множества действий. Ниже приводится список таких действий, которые одновременно представляют этапы идеального жизненного цикла программного проекта — от идеи до разработки и развертывания в продакшене.
+1. Определение целей и моделирование производительности будущего продукта.
+2. Определение характеристик производительности прототипа программного и аппаратного обеспечения.
+3. Анализ производительности разрабатываемых продуктов в тестовой среде.
+4. Регрессионное тестирование новых версий продукта.
+5. Бенчмаркинг производительности разных версий продуктов.
+6. Проверка концепции в целевой промышленной среде.
+7. Оптимизация производительности в промышленной среде.
+8. Мониторинг ПО, действующего в промышленной среде.
+9. Анализ производительности промышленных задач.
+1.3. Действия 45  10. Ревью инцидентов, возникающих в промышленной среде.
+ 11. Разработка инструментов для повышения эффективности анализа произво-дительности в промышленной среде.
