--- a/Books/Производительность_систем.md
+++ b/Books/Производительность_систем.md
@@ -14,5 +14,5 @@
 7. Оптимизация производительности в промышленной среде.
 8. Мониторинг ПО, действующего в промышленной среде.
 9. Анализ производительности промышленных задач.
-1.3. Действия 45  10. Ревью инцидентов, возникающих в промышленной среде.
- 11. Разработка инструментов для повышения эффективности анализа произво-дительности в промышленной среде.
+10. Ревью инцидентов, возникающих в промышленной среде.
+ 11. Разработка инструментов для повышения эффективности анализа производительности в промышленной среде.
