--- a/Books/Производительность_систем.md
+++ b/Books/Производительность_систем.md
@@ -16,3 +16,7 @@
 9. Анализ производительности промышленных задач.
 10. Ревью инцидентов, возникающих в промышленной среде.
  11. Разработка инструментов для повышения эффективности анализа производительности в промышленной среде.
+
+Облачные вычисления предлагают новые методы проверки концепции (шаг 6), которые побуждают пропускать более ранние шаги (с 1-го по 5-й). Один из таких методов — тестирование нового ПО на единственном экземпляре с небольшой рабочей нагрузкой: это называется канареечным тестированием.
+Другой метод превращает его в обычный шаг при развертывании: трафик постепенно перемеща-ется в новый пул экземпляров, при этом старый пул остается в горячем резерве; 
+этот метод известен как сине-зеленое развертывание1.
