--- a/Books/Производительность_систем.md
+++ b/Books/Производительность_систем.md
@@ -20,3 +20,6 @@
 Облачные вычисления предлагают новые методы проверки концепции (шаг 6), которые побуждают пропускать более ранние шаги (с 1-го по 5-й). Один из таких методов — тестирование нового ПО на единственном экземпляре с небольшой рабочей нагрузкой: это называется канареечным тестированием.
 Другой метод превращает его в обычный шаг при развертывании: трафик постепенно перемеща-ется в новый пул экземпляров, при этом старый пул остается в горячем резерве; 
 этот метод известен как сине-зеленое развертывание1.
+
+Некоторые проблемы с производительностью не имеют единственной первопричины и обусловлены множеством факторов. Представьте сценарий, когда одновременно происходят три вполне обычных события, которые в совокупности вызывают про-блему с производительностью: каждое из этих событий — обычное и само по себе не является первопричиной.
+Множественными могут быть не только причины, но и сами проблемы с произво-дительностью.
