--- a/AlgorithmsAndProgrramming/Процедуры-26.10.md
+++ b/AlgorithmsAndProgrramming/Процедуры-26.10.md
@@ -158,6 +158,22 @@ interface
  конец описания функции
 end interface
 ```
+Пример
+```
+interface RAND
+  elemental function scalar_rand(x)
+    real, intent(in) :: x
+    real scalar_rand
+  end function scalar_rand
+
+  function vector_random(x)
+    real x(:)
+    real vector_randok(size(x))
+  end function vector_random
+end interface RAND
+```
+Существуют две функции `scalar_rand` и `vector_random`. Нельзя обращаться к ним по имени, т.к. они объединены в одном интерфейсе. Их можно вызывать только по названию интерфейса. В зависисоти от передаваемого параметра будет вызываться или одна функция или другая.
+
 ### Оператор return
 Вернуть управление вызывающей процедуре или головной программе.
 
@@ -196,4 +212,13 @@ end
 - отсутствуют операторы В/В, stop.
 
 ### Элементные процедуры
+```
+pure elemental function F(p, x)
+  real(R_) p, x
+  real(R_) F
+  intent(in) p, x
+  real(R_), parameter :: q = 2.75_R_
+  F = sqrt(p + q * x**2) / (3 + p*x + q*x**2) ! векторизация
 
+```
+Вместо скаляров p и x можно передавать в функцию массивы
