--- a/AlgorithmsAndProgrramming/Процедуры-26.10.md
+++ b/AlgorithmsAndProgrramming/Процедуры-26.10.md
@@ -174,6 +174,10 @@ end interface RAND
 ```
 Существуют две функции `scalar_rand` и `vector_random`. Нельзя обращаться к ним по имени, т.к. они объединены в одном интерфейсе. Их можно вызывать только по названию интерфейса. В зависисоти от передаваемого параметра будет вызываться или одна функция или другая.
 
+Однако, при `Real AA(10, 10), A(10, 10); A = RAND(AA)`, будет вызвана функция `scalar_rand`, хотя ни `scalar_rand`, ни `vector_random` не принимают двумерные массивы. Почему будет вызвана функция `scalar_rand`? Из-за `elemental`.
+
+При `A(:,1) = RAND(AA(6:10,2))` будет вызвана функция `vector_random`.
+
 ### Оператор return
 Вернуть управление вызывающей процедуре или головной программе.
 
@@ -222,3 +226,18 @@ pure elemental function F(p, x)
 
 ```
 Вместо скаляров p и x можно передавать в функцию массивы
+Пример
+```
+interface RAND
+  elemental function scalar_rand(x)
+    real, intent(in) :: x
+    real scalar_rand
+  end function scalar_rand
+
+  function vector_random(x)
+    real x(:)
+    real vector_randok(size(x))
+  end function vector_random
+end interface RAND
+```
+При `Real AA(10, 10), A(10, 10); A = RAND(AA)`, будет вызвана функция `scalar_rand`, хотя ни `scalar_rand`, ни `vector_random` не принимают двумерные массивы. Почему будет вызвана функция `scalar_rand`? Из-за `elemental`.
