--- a/AlgorithmsAndProgrramming/Процедуры-26.10.md
+++ b/AlgorithmsAndProgrramming/Процедуры-26.10.md
@@ -243,14 +243,12 @@ end interface RAND
 При `Real AA(10, 10), A(10, 10); A = RAND(AA)`, будет вызвана функция `scalar_rand`, хотя ни `scalar_rand`, ни `vector_random` не принимают двумерные массивы. Почему будет вызвана функция `scalar_rand`? Из-за `elemental`.
 
 
-| Характеристика|Нечистая функция|Нечистая подпрограмма|Чистая функция|Чистая подпрограмма|Простая(константная ) процедура|
+| Характеристика|Нечистая функция|Нечистая подпрограмма|Чистая функция|Чистая подпрограмма|Простая(константная) процедура|
 |---|---|---|---|---|---|
 |Может менять аргументы|+|+|-|+|-|
-|---|---|---|---|---|---|
-|---|---|---|---|---|---|
-|---|---|---|---|---|---|
-|---|---|---|---|---|---|
-|---|---|---|---|---|---|
-|---|---|---|---|---|---|
-|---|---|---|---|---|---|
-|---|---|---|---|---|---|
+|Может вызывать нечистые процедуры|+|+|-|-|-|
+|Может вызывать чистые процедуры|+|+|+|+|-|
+|Если вызывают, то только простые (константные) процедуры|-|-|-|-|+|
+|Может менять глобальные переменные|+|+|-|-|-|
+|Может читать глобальные переменные|+|+|+|+|-|
+
