--- a/Алгоритмы_и_структуры_данных/Рекурсия-26.10.md
+++ b/Алгоритмы_и_структуры_данных/Рекурсия-26.10.md
@@ -14,6 +14,7 @@
 Хвостовая рекурсия - специальный случай рекурсии, при котором любой рекурсивный вызов является последней операцией перед возратом функции.
 
 Данный вид рекурсии примечателен тем, что легко может быть изменен на итерацию.
+
 **Не хвостовая рекурсия**
 ```
 recursive integer pure function Factorial(N)
@@ -43,7 +44,21 @@ recursive integer pure function Fact_Times(N, Acc)
         Factrorial = Fac_Times (N, 1)
 end function
 ```
+```
+! Во что может развернуть компилятор:
+  pure integer function Factorial(N)
+     integer, intent(in) :: N
+     
+     integer :: Acc = 1, _N = N
+     
+     do while (_N /= 0)
+        Acc = Acc * N
+        _N = _N - 1
+     end do
+    Factrorial = Acc
+ end function
 
+```
 
 02.11
 
