--- a/Алгоритмы_и_структуры_данных/Рекурсия-26.10.md
+++ b/Алгоритмы_и_структуры_данных/Рекурсия-26.10.md
@@ -9,6 +9,8 @@
 Недостатки:
 - Рекурсивные процедуры приводят к последовательному вызову своих экземпляров. Уходит много памяти.
 
+Используем приемущественно хвостовую рекурсию
+
 ### Хвостовая рекурсия
 
 Хвостовая рекурсия - специальный случай рекурсии, при котором любой рекурсивный вызов является последней операцией перед возратом функции.
