--- a/Алгоритмы_и_структуры_данных/Рекурсия-26.10.md
+++ b/Алгоритмы_и_структуры_данных/Рекурсия-26.10.md
@@ -61,3 +61,6 @@ end function
  end function
 ```
 
+Следует избегать рекурсии, если есть очевидное решение использующее итерацию.
+
+Алгоритмы, которые по своей природе являются рекурсивными, а не итерационными, должны программироваться в виде рекурсивных процедур.
