--- a/Алгоритмы_и_структуры_данных/Производные_типы_данных-02.11.md
+++ b/Алгоритмы_и_структуры_данных/Производные_типы_данных-02.11.md
@@ -3,7 +3,7 @@
 Отличие юникод и утф-8
 
 чтение проводим без явных циклов
-delemiters для чтения
+delimiter для чтения
 
 доп матеериал для первой дисциплины
 
@@ -21,10 +21,43 @@ type(wheel) :: w1 # экземпляр типа wheel или запись
 ```
 Запись - это переменная производного типа данных (стрктурного типа данных)
 
+Производный тип данных (структура) – это одно или несколько объявлений переменных (как правило, разного типа), сгруппированных под одним именем. Структура должна вводиться в разделе объявлений программы.
+
+Замечания:
+- По умолчанию объявленный в модуле производный тип доступен в любой программной единице, использующей модуль.(инкапсуляция)
+- При определении компонента производного типа могут быть использованы атрибуты: pointer, allocatable и dimension.
+
+
 ### Присваивание
 Присваивание является единственной встроенной операцией
 
+Оператор type, как и другие операторы объявления данных, предшествует исполняемым операторам.
+
+Запись является составной переменной. Для доступа к компоненту записи используется селектор компонента – символ процента (%)
+
+```
+type(bicycle) :: mine, yours
+    yours = mine
+mine%front = yours%back
+```
+
 При присваивание всегда происходит копирование данных
+
+```
+type :: fred
+    real :: x
+end type fred
+
+type :: joe
+    real :: x
+end type joe
+
+type(fred) :: a
+type(joe) :: b
+
+a = b ! ошибка
+! можно запрограммировать переопределение присваивания. Пример в модуле envirment
+```
 
 ### Конструтор производного типа
 ```
@@ -34,8 +67,8 @@ type :: wheel
   integer :: spokes
 end type wheel
 
-type(wheel) :: w1 # экземпляр типа wheel или запись
-w1 = wheel(1.23, 4.56, 2.0, .false.)
+type(wheel) :: w1 ! экземпляр типа wheel или запись
+w1 = wheel(1.23, 4.56, 2.0, .false.) ! конструктор, можно его переопределить
 ```
 
 ### Частные типы
