--- a/Алгоритмы_и_структуры_данных/Производные_типы_данных-02.11.md
+++ b/Алгоритмы_и_структуры_данных/Производные_типы_данных-02.11.md
@@ -70,22 +70,35 @@ end type wheel
 type(wheel) :: w1 ! экземпляр типа wheel или запись
 w1 = wheel(1.23, 4.56, 2.0, .false.) ! конструктор, можно его переопределить
 ```
+Правильно производить инициализацию по цмолчанию
 
 ### Частные типы
 ```
-module nammals
-  type, private :: kangaroo
-    real :: 
+module mammals
+   type, private :: kangaroo
+       real :: weight, length
+   end type kangaroo
+  
+   real, private :: koala
+contains
+. . .
+end module mammals
 ```
+kangaroo, как и переменная koala, не доступны вне модуля mammals
+
 
 ### Скрытые компоненты
 ```
-module nammals
-  type :: kangaroo
-    private
-    real :: weight, length
-  end type ::
+module mammals
+   type :: kangaroo
+       private
+       real :: weight, length
+   end type kangaroo
+contains
+. . .
+end module mammals
 ```
+kangaroo доступен вне модуля mammals, а его компоненты (weight, length) нет
 
 ### Присваивание значение компонентам записи
 
