--- a/Алгоритмы_и_структуры_данных/Производные_типы_данных-02.11.md
+++ b/Алгоритмы_и_структуры_данных/Производные_типы_данных-02.11.md
@@ -101,7 +101,30 @@ end module mammals
 kangaroo доступен вне модуля mammals, а его компоненты (weight, length) нет
 
 ### Присваивание значение компонентам записи
+```
+type item_d ! Описание заказанной вещи
+     character(20) color, size ! Название, цвет, размер
+     real(4) price ! Цена
+end type
 
+type order ! Описание заказа
+     integer(4) ordnum ! Номер заказа
+     type(item_d) item(10)
+end type
+
+type(order) cur_ord
+cur_ord = order(1200, item_d('white', 'S', 35.25))
+
+! Присвоим значение отдельному компоненту записи
+cur_ord%ordnum = 1300 ! Изменим код покупателя
+
+! Присвоим значение компоненту записи - элементу массива:
+cur_ord%item(2)%color = 'blue' ! Изменим цвет второй вещи заказа
+
+! Присвоим значение всему массиву - компоненту записи:
+cur_ord%item%color = 'none'
+! нерегулярный доступ к памяти
+```
 ### Массивы структур и структуры массивов
 
 В зависимости от задач стоит использовать или одно или другое. Массив структур использовать удобнее. Но стоит ориентироваться на характер работы с экземплярами. Если работаем чаще со всем массивом экземпляров, то лучше это представлять как структуру массивов. Если чаще работаем с полями одного определенного массива, то лучше использовать массив структур.
