--- a/Алгоритмы_и_структуры_данных/Динамические_структуры_данных-09.02.md
+++ b/Алгоритмы_и_структуры_данных/Динамические_структуры_данных-09.02.md
@@ -1,1 +1,24 @@
+# Ссылки и указатели
+Ссылка - переменная, связанная с другой переменной, называемой адресатом
 
+При обращении к ссылке будет происходить обращение к адресату и наоборот. 
+
+Ссылка - это адрес на описатель массива
+
+В фортране нет указателей. Работа с ссылками удобнее чем с указателями. 
+
+Ссылки позволяют создавать динамические структуры данных - списки, стеки, деревья, очереди.
+
+Операция => прикрепление ссылки к адресату.
+```
+program prog
+ integer, pointer :: p
+ integer, target :: a
+ a = 100
+ p => a ! прикрепили ссылку к адресату
+ write(*,*) p
+ p = 100 ! a = 100
+ a = 500 ! p = 500
+end
+```
+Все изменения, происходящие с адресатом, дублируются в ссылке. 
