--- a/Алгоритмы_и_структуры_данных/Динамические_структуры_данных-09.02.md
+++ b/Алгоритмы_и_структуры_данных/Динамические_структуры_данных-09.02.md
@@ -22,3 +22,12 @@ program prog
 end
 ```
 Все изменения, происходящие с адресатом, дублируются в ссылке. 
+**Используем в крайних случаях**
+
+Рванный массив - длина каждого столбика может быть разной. Такая матрица не векторизуется.
+```
+type Cell
+  real, pointer :: column(:)
+end type Cell
+type(Cell) :: matrix(:)
+```
