--- a/Алгоритмы_и_структуры_данных/Динамические_структуры_данных-09.02.md
+++ b/Алгоритмы_и_структуры_данных/Динамические_структуры_данных-09.02.md
@@ -31,3 +31,20 @@ type Cell
 end type Cell
 type(Cell) :: matrix(:)
 ```
+Функция associated(pt, addr) возвращает .TRUE.
+если ссылка pt прикреплена к адресату addr
+
+```
+program prog
+ integer, pointer :: p1, p2, p3
+ integer, target :: a,b
+ a = 100; b = 2; p1 => a; p2 => a
+ write(*, *) associated(p1, p2) ! TRUE
+ write(*, *) associated(p1)
+ write(*, *) associated(p2, a)
+ p1 => b
+ write(*, *) associated(p3) ! FALSE
+ write(*, *) associated(p1, p2)
+ write(*, *) associated(p1, a)
+end
+```
