--- a/Алгоритмы_и_структуры_данных/Динамические_структуры_данных-09.02.md
+++ b/Алгоритмы_и_структуры_данных/Динамические_структуры_данных-09.02.md
@@ -48,3 +48,10 @@ program prog
  write(*, *) associated(p1, a)
 end
 ```
+
+`deallocate` - освобождение данных
+
+Ссылки в отчие от размещяемях объектов не являются автоматическими, то есть при выходе из зоны видимости ссылки, данные сохранятся.
+
+
+
