--- a/Алгоритмы_и_структуры_данных/Динамические_структуры_данных-09.02.md
+++ b/Алгоритмы_и_структуры_данных/Динамические_структуры_данных-09.02.md
@@ -53,5 +53,18 @@ end
 
 Ссылки в отчие от размещяемях объектов не являются автоматическими, то есть при выходе из зоны видимости ссылки, данные сохранятся.
 
+Оператор nullify - открепление ссылки от адресата.
+```
+program prog
+ integer, pointer :: p1, p2
+ integer, target :: a
+ a = 1000; p1 => a; p2 => a
+ ! если к адресату прикреплены две ссылки,
+ ! то отсоединим последнюю
+ if (associated(p1, p2)) nullify(p2)
+ write(*,*) associated(p1), associated(p2) ! T, F
+end
+```
+
 
 
