--- a/Алгоритмы_и_структуры_данных/Динамические_структуры_данных-09.02.md
+++ b/Алгоритмы_и_структуры_данных/Динамические_структуры_данных-09.02.md
@@ -53,7 +53,7 @@ end
 
 Ссылки в отчие от размещяемях объектов не являются автоматическими, то есть при выходе из зоны видимости ссылки, данные сохранятся.
 
-Оператор nullify - открепление ссылки от адресата.
+Оператор `nullify` - открепление ссылки от адресата.
 ```
 program prog
  integer, pointer :: p1, p2
@@ -66,5 +66,17 @@ program prog
 end
 ```
 
-
+Когда ссылка оператором прикрепляется к другой ссылке, то это значит, что она ссылается на первоначальную область в память (туда же кужа сслыается вторая сслыка)
+```
+function select (switch, left, right)
+ real, pointer :: select, left, right
+ logical switch
+ if (switch) then
+ select => left
+ else
+ select => right
+ end if
+end function select
+new_arrow => select(a > b,old_arrow,null())
+```
 
