--- a/Алгоритмы_и_структуры_данных/Динамические_структуры_данных-09.02.md
+++ b/Алгоритмы_и_структуры_данных/Динамические_структуры_данных-09.02.md
@@ -24,7 +24,7 @@ end
 Все изменения, происходящие с адресатом, дублируются в ссылке. 
 **Используем в крайних случаях**
 
-Рванный массив - длина каждого столбика может быть разной. Такая матрица не векторизуется.
+Рванный массив (jagged matrix) - длина каждого столбика может быть разной. Такая матрица не векторизуется.
 ```
 type Cell
   real, pointer :: column(:)
@@ -80,3 +80,9 @@ end function select
 new_arrow => select(a > b,old_arrow,null())
 ```
 
+Список - это ссылка на первый элемент
+
+Нисходящее программирование:
+- заводим переменные для головной программы - компилируем
+- пишем все процедуры головной программы, но там не операторов исполнения - компилируем
+- описываем процедуры
