--- a/Алгоритмы_и_структуры_данных/Динамические_структуры_данных-09.02.md
+++ b/Алгоритмы_и_структуры_данных/Динамические_структуры_данных-09.02.md
@@ -86,3 +86,6 @@ new_arrow => select(a > b,old_arrow,null())
 - заводим переменные для головной программы - компилируем
 - пишем все процедуры головной программы, но там не операторов исполнения - компилируем
 - описываем процедуры
+
+Очередь - это список, в который элементы добавляются в конец, а забираются из начала
+Стек - это список, в котором элементы добавляются и забираются из конца.
