--- a/Books/Грокаем_алгоритмы.md
+++ b/Books/Грокаем_алгоритмы.md
@@ -1,1 +1,23 @@
-# 1 Бинарный поиск
+## 1 Бинарный поиск
+- При бинарном поиске каждый раз исключается половина чисел, т.к. алгоритм проверяет средний элемент
+- В общем случае для cпсика из n элементов бинарный поиск выполняется за `log2(n)`
+- Бинарный поиск работает только на отсортированном списке
+
+Пример: функция, которая возвращает индекс искомого элемента в массиве
+```python
+def binary_search(list, item)
+  # low и high - границы той части списка, в которой выполняется поиск
+  low = 0
+  high = len(list) - 1
+
+  while low <= high    # пока область поиска не сократилась до одного элемента, проверяем средний элемент
+    mid = (low + high)/2
+    guess = list[mid]
+    if guess == item:  # значение найдено
+      return mid
+    if guess > item:   # много
+      high = mid - 1
+    else:              # мало
+      low = mid + 1
+return None            # значение не существует
+```
