--- a/Books/Грокаем_алгоритмы.md
+++ b/Books/Грокаем_алгоритмы.md
@@ -1,6 +1,6 @@
 ## 1 Бинарный поиск
 - При бинарном поиске каждый раз исключается половина чисел, т.к. алгоритм проверяет средний элемент
-- В общем случае для cпсика из n элементов бинарный поиск выполняется за `log2(n)`
+- В общем случае для cпсика из n элементов бинарный поиск выполняется за `log2(n)`, т.е. O(log n) - логарифмическое время 
 - Бинарный поиск работает только на отсортированном списке
 
 Пример: функция, которая возвращает индекс искомого элемента в массиве
