--- a/Books/Грокаем_алгоритмы.md
+++ b/Books/Грокаем_алгоритмы.md
@@ -1,3 +1,5 @@
+"O" - зависимость времени выполнения от кол-ва элеменетов в списке, описывает худший вариант
+
 ## 1 Бинарный поиск
 - При бинарном поиске каждый раз исключается половина чисел, т.к. алгоритм проверяет средний элемент
 - В общем случае для cпсика из n элементов бинарный поиск выполняется за `log2(n)`, т.е. O(log n) - логарифмическое время 
