--- a/Books/Грокаем_алгоритмы.md
+++ b/Books/Грокаем_алгоритмы.md
@@ -1,4 +1,7 @@
 "O" - зависимость времени выполнения от кол-ва элеменетов в списке, описывает худший вариант
+### Массивы и связанные списки
+Массивы подходят для чтения элементов в произвольных позициях, потому что обращение к любому элементу в массиве происходит мгновенно. В связанном списке элементы не хранятся друг с другом, поэтому мгновенно определить позицию i-го элемента в памяти невозможно - нужно обращаться к первому 
+лементу, чтобы получить адрес второго элемента, затем обратиться ко второму элементу для получения адреса третьего - и так далее, пока не доберемся до i-го элемента.
 
 ## Алгоритмы поиска
 ### 1 Бинарный поиск
