--- a/Books/Грокаем_алгоритмы.md
+++ b/Books/Грокаем_алгоритмы.md
@@ -3,6 +3,10 @@
 Массивы подходят для чтения элементов в произвольных позициях, потому что обращение к любому элементу в массиве происходит мгновенно. В связанном списке элементы не хранятся друг с другом, поэтому мгновенно определить позицию i-го элемента в памяти невозможно - нужно обращаться к первому 
 лементу, чтобы получить адрес второго элемента, затем обратиться ко второму элементу для получения адреса третьего - и так далее, пока не доберемся до i-го элемента.
 
+- Для поиска удобнее использовать несвязанный список.
+- Для вставки в середину списка лучше использовать связанный список
+- 
+
 ## Алгоритмы поиска
 ### 1 Бинарный поиск
 - При бинарном поиске каждый раз исключается половина чисел, т.к. алгоритм проверяет средний элемент
