--- a/Алгоритмы_и_структуры_данных/Динамические_структуры_данных-09.02.md
+++ b/Алгоритмы_и_структуры_данных/Динамические_структуры_данных-09.02.md
@@ -1,4 +1,6 @@
 # Ссылки и указатели
+В фортране нет указателей, pointer - ссылка
+
 Ссылка - переменная, связанная с другой переменной, называемой адресатом
 
 При обращении к ссылке будет происходить обращение к адресату и наоборот. 
