--- a/Алгоритмы_и_структуры_данных/Динамические_структуры_данных-09.02.md
+++ b/Алгоритмы_и_структуры_данных/Динамические_структуры_данных-09.02.md
@@ -1,6 +1,10 @@
 # Ссылки и указатели
 В фортране нет указателей, pointer - ссылка
 
+Указатель - это адрес на массив
+
+Ссылка - это адрес на описатель массива
+
 Ссылка - переменная, связанная с другой переменной, называемой адресатом
 
 При обращении к ссылке будет происходить обращение к адресату и наоборот. 
