--- a/Алгоритмы_и_структуры_данных/Динамические_структуры_данных-09.02.md
+++ b/Алгоритмы_и_структуры_данных/Динамические_структуры_данных-09.02.md
@@ -16,6 +16,8 @@
 Ссылки позволяют создавать динамические структуры данных - списки, стеки, деревья, очереди.
 
 Операция => прикрепление ссылки к адресату.
+
+`target` пишем для указания того, что разрешено перекрытие по памяти
 ```
 program prog
  integer, pointer :: p
