--- a/Алгоритмы_и_структуры_данных/Динамические_структуры_данных-09.02.md
+++ b/Алгоритмы_и_структуры_данных/Динамические_структуры_данных-09.02.md
@@ -42,6 +42,11 @@ type(Cell) :: matrix(:)
 Функция associated(pt, addr) возвращает .TRUE.
 если ссылка pt прикреплена к адресату addr
 
+Перед началом работы зануляем ссылку `integer, pointer :: p3, p2 => Null()`
+```
+if (associated(o2)) &
+  write (*, *) p2 !недопустимо
+```
 ```
 program prog
  integer, pointer :: p1, p2, p3
