--- a/Алгоритмы_и_структуры_данных/Динамические_структуры_данных-09.02.md
+++ b/Алгоритмы_и_структуры_данных/Динамические_структуры_данных-09.02.md
@@ -47,6 +47,7 @@ type(Cell) :: matrix(:)
 if (associated(o2)) &
   write (*, *) p2 !недопустимо
 ```
+Если во время программы используем `p3 => Null()`, то перед этим обязательно нужно сделать `deallocate(p3)`, иначе будет утеска памяти
 ```
 program prog
  integer, pointer :: p1, p2, p3
