--- a/Алгоритмы_и_структуры_данных/Динамические_структуры_данных-09.02.md
+++ b/Алгоритмы_и_структуры_данных/Динамические_структуры_данных-09.02.md
@@ -23,7 +23,7 @@ program prog
  integer, pointer :: p
  integer, target :: a
  a = 100
- p => a ! прикрепили ссылку к адресату
+ p => a ! прикрепили ссылку к адресату, теперь p ссылается на тот же объект что и а
  write(*,*) p
  p = 100 ! a = 100
  a = 500 ! p = 500
