--- a/Алгоритмы_и_структуры_данных/Динамические_структуры_данных-09.02.md
+++ b/Алгоритмы_и_структуры_данных/Динамические_структуры_данных-09.02.md
@@ -67,6 +67,8 @@ end
 
 Ссылки в отчие от размещяемях объектов не являются автоматическими, то есть при выходе из зоны видимости ссылки, данные сохранятся.
 
+Линейные динамические сьруктуры могут быть однонаправленными (когда перемещаясь по ссылкам идем в одном направлении) и многонаправленными. Однонаправленные динамические структуры могут быть стеками, очередями и линейными списками.
+
 Оператор `nullify` - открепление ссылки от адресата.
 ```
 program prog
