--- a/Алгоритмы_и_структуры_данных/Динамические_структуры_данных-09.02.md
+++ b/Алгоритмы_и_структуры_данных/Динамические_структуры_данных-09.02.md
@@ -32,14 +32,14 @@ end
 Все изменения, происходящие с адресатом, дублируются в ссылке. 
 **Используем в крайних случаях**
 
-Рванный массив (jagged matrix) - длина каждого столбика может быть разной. Такая матрица не векторизуется.
+**Рванный массив** (jagged matrix) - длина каждого столбика может быть разной. Такая матрица не векторизуется.
 ```
 type Cell
   real, pointer :: column(:)
 end type Cell
 type(Cell) :: matrix(:)
 ```
-Функция associated(pt, addr) возвращает .TRUE.
+Функция `associated(pt, addr)` возвращает .TRUE.
 если ссылка pt прикреплена к адресату addr
 
 Перед началом работы зануляем ссылку `integer, pointer :: p3, p2 => Null()`
@@ -65,9 +65,9 @@ end
 
 `deallocate` - освобождение данных
 
-Ссылки в отчие от размещяемях объектов не являются автоматическими, то есть при выходе из зоны видимости ссылки, данные сохранятся.
+Ссылки в отчие от размещаемых объектов не являются автоматическими, то есть при выходе из зоны видимости ссылки, данные сохранятся.
 
-Линейные динамические сьруктуры могут быть однонаправленными (когда перемещаясь по ссылкам идем в одном направлении) и многонаправленными. Однонаправленные динамические структуры могут быть стеками, очередями и линейными списками.
+Линейные динамические структуры могут быть однонаправленными (когда перемещаясь по ссылкам идем в одном направлении) и многонаправленными. Однонаправленные динамические структуры могут быть стеками, очередями и линейными списками.
 
 Оператор `nullify` - открепление ссылки от адресата.
 ```
