--- a/Books/Грокаем_алгоритмы.md
+++ b/Books/Грокаем_алгоритмы.md
@@ -1,10 +1,10 @@
 "O" - зависимость времени выполнения от кол-ва элеменетов в списке, описывает худший вариант
 ### Массивы и связанные списки
 Массивы подходят для чтения элементов в произвольных позициях, потому что обращение к любому элементу в массиве происходит мгновенно. В связанном списке элементы не хранятся друг с другом, поэтому мгновенно определить позицию i-го элемента в памяти невозможно - нужно обращаться к первому 
-лементу, чтобы получить адрес второго элемента, затем обратиться ко второму элементу для получения адреса третьего - и так далее, пока не доберемся до i-го элемента.
+элементу, чтобы получить адрес второго элемента, затем обратиться ко второму элементу для получения адреса третьего - и так далее, пока не доберемся до i-го элемента.
 
 - Для поиска удобнее использовать несвязанный список.
-- Для вставки в середину списка лучше использовать связанный список
+- Для вставки и удаления элемнта в список лучше использовать связанный список
 - 
 
 ## Алгоритмы поиска
