--- a/Books/Грокаем_алгоритмы.md
+++ b/Books/Грокаем_алгоритмы.md
@@ -5,7 +5,8 @@
 
 - Для поиска удобнее использовать несвязанный список.
 - Для вставки и удаления элемнта в список лучше использовать связанный список
-- 
+- Связанные списки поддерживают только последовательный доступ к памяти
+- Простые списки поддерживают поддерживают произвольный доступ к памяти
 
 ## Алгоритмы поиска
 ### 1 Бинарный поиск
@@ -34,3 +35,14 @@ return None            # значение не существует
 
 ## Алгоритмы сортировки
 ### Сортировка выбором
+- Список из n элементов проходит n раз, выбирая из списка самый большой (маленький) элемент, перемещает его в новый список
+- Сложность О(n^2)
+
+```python
+def Sort(arr):
+  newArr = []
+  for i in range(len(arr)):
+    smallest = min(arr)
+    newArr.append(arr.pop(smallest))
+return newArr
+```
