--- a/Books/Грокаем_алгоритмы.md
+++ b/Books/Грокаем_алгоритмы.md
@@ -8,6 +8,10 @@
 - Связанные списки поддерживают только последовательный доступ к памяти
 - Простые списки поддерживают поддерживают произвольный доступ к памяти
 
+## Метод решения задач "Разделяй и властвуй"
+1. Определяется базовый случай - простейший случай из всех возможных
+2. Задача делится до тех пор, пока не будет сведена к базовому случаю
+
 ## Алгоритмы поиска
 ### 1 Бинарный поиск
 - При бинарном поиске каждый раз исключается половина чисел, т.к. алгоритм проверяет средний элемент
