--- a/Books/Грокаем_алгоритмы.md
+++ b/Books/Грокаем_алгоритмы.md
@@ -12,6 +12,15 @@
 1. Определяется базовый случай - простейший случай из всех возможных
 2. Задача делится до тех пор, пока не будет сведена к базовому случаю
 
+## Алгоритм Евклида для поиска НОД 
+- Для любых двух натуральных чисел a > b верно `НОД(a, b) > НОД(a-b, b)`
+Алгоритм Евклида:
+- Для нахождения общего делителя двух чисел нужно заменить большее из чисел на остаток от деления его на меньшее и для получения пары повторять эту процедуру, пока одно из чисел не станет равно нулю. Тогда второе число - НОД
+  
+`НОД(175, 90) = НОД(85, 90) = НОД(85, 5) = НОД(0, 5) = 5`
+
+
+  
 ## Алгоритмы поиска
 ### 1 Бинарный поиск
 - При бинарном поиске каждый раз исключается половина чисел, т.к. алгоритм проверяет средний элемент
