--- a/Books/Грокаем_алгоритмы.md
+++ b/Books/Грокаем_алгоритмы.md
@@ -59,3 +59,20 @@ def Sort(arr):
     newArr.append(arr.pop(smallest))
 return newArr
 ```
+### Быстрая сортировка
+- Выбирается опорный элемент
+- Все элементы массива сравниваются с опорным - получаем подмассив с числами меньше опорного и с числами больше опорного
+- Выбираем опорные элементы в подмассивах и сортируем их подобным образом
+- Объединяем все полученные подмассивы
+  ```python
+def Sort(arr):
+  if len(arr) < 2:
+    return arr
+  else:
+    pivot = arr[0]
+    less = [i for i in array[1:] if i < pivot]
+
+    greater = [i for i in array[1:] if i > pivot]
+
+    return Sort(less) + [pivot] + Sort(greater)
+  ```
