--- a/Books/Грокаем_алгоритмы.md
+++ b/Books/Грокаем_алгоритмы.md
@@ -64,6 +64,7 @@ return newArr
 - Все элементы массива сравниваются с опорным - получаем подмассив с числами меньше опорного и с числами больше опорного
 - Выбираем опорные элементы в подмассивах и сортируем их подобным образом
 - Объединяем все полученные подмассивы
+- в среднем слцчае (опорный элемент в середине) сложность `O(n log n)`, в худшем случае (опорный элемент первый или последний) - `O(n^2)`
   ```python
 def Sort(arr):
   if len(arr) < 2:
