--- a/Алгоритмы_и_структуры_данных/23.10.md
+++ b/Алгоритмы_и_структуры_данных/23.10.md
@@ -35,7 +35,7 @@
    - описываем, что делать с текущим узлом
    - проверяем связанность следующего узла, запускаем рекурсию на нем
 - или текущей переменной-ссылки (является чьим-то полем next или переменной-головой списка при первом вызове
-  Вначале самой рекурсии проверяем связанность переменной-ссылки и тогда
-  - описываем, что делать с текущей переменной-ссылкой
-  - смело запускаем рекурсию на следующей переменной-ссылке (поле next)
+  - Вначале самой рекурсии проверяем связанность переменной-ссылки и тогда
+   - описываем, что делать с текущей переменной-ссылкой
+   - смело запускаем рекурсию на следующей переменной-ссылке (поле next)
     
