--- a/Алгоритмы_и_структуры_данных/23.10.md
+++ b/Алгоритмы_и_структуры_данных/23.10.md
@@ -32,10 +32,10 @@
 Рекурсивная процедура описывает обработку не списка, а:
 - текцущего узла списка:
  - - до первого вызова рекурсии проверяем связанность ссылки, а внутри нее:
-   - описываем, что делать с текущим узлом
-   - проверяем связанность следующего узла, запускаем рекурсию на нем
+   1) описываем, что делать с текущим узлом
+   2)  проверяем связанность следующего узла, запускаем рекурсию на нем
 - или текущей переменной-ссылки (является чьим-то полем next или переменной-головой списка при первом вызове
   - Вначале самой рекурсии проверяем связанность переменной-ссылки и тогда
-   - описываем, что делать с текущей переменной-ссылкой
-   - смело запускаем рекурсию на следующей переменной-ссылке (поле next)
+   1) описываем, что делать с текущей переменной-ссылкой
+   2) смело запускаем рекурсию на следующей переменной-ссылке (поле next)
     
