--- a/Алгоритмы_и_структуры_данных/23.10.md
+++ b/Алгоритмы_и_структуры_данных/23.10.md
@@ -38,4 +38,5 @@
   - Вначале самой рекурсии проверяем связанность переменной-ссылки и тогда
    1) описываем, что делать с текущей переменной-ссылкой
    2) смело запускаем рекурсию на следующей переменной-ссылке (поле next)
-    
+
+**Не выделяем отдельно обработку первого, последнего или не размещенного элемента**
