--- a/Алгоритмы_и_структуры_данных/23.10.md
+++ b/Алгоритмы_и_структуры_данных/23.10.md
@@ -40,3 +40,14 @@
    2) смело запускаем рекурсию на следующей переменной-ссылке (поле next)
 
 **Не выделяем отдельно обработку первого, последнего или не размещенного элемента**
+
+Кодируем на более высоком уровне абстракции по сравнению с
+чисто императивным программированием, используя следующие
+средства функционального программирования – чистые
+рекурсивные хвостовые процедуры
+|Намерения |Чистая рекурсивная хвостовая процедура|Принимаем|
+|----------|--------------------------------------|---------|
+|ничего не меняем в структуре данных, возвращаем| функция | объект (in)*|
+|ничего не меняем в структуре данных| подпрограмма |объект (in)*|
+|меняем поля в структуре данных| подпрограмма |объект (inout)*|
+|меняем ссылки в структуре данных| подпрограмма| переменная-ссылка (inout)|
