--- a/Алгоритмы_и_структуры_данных/23.10.md
+++ b/Алгоритмы_и_структуры_данных/23.10.md
@@ -51,3 +51,18 @@
 |ничего не меняем в структуре данных| подпрограмма |объект (in)*|
 |меняем поля в структуре данных| подпрограмма |объект (inout)*|
 |меняем ссылки в структуре данных| подпрограмма| переменная-ссылка (inout)|
+### Разница в передаче параметров
+```
+pure recursive subroutine Kind(current)
+ type(node), intent(in) :: current ! приём объекта, по смыслу -- это очередной узел
+списка
+ current ! объект
+ current%filed ! поле объекта
+end
+pure recursive subroutine KindPtr(current)
+ type(List), pointer, intent(inout) :: elem! приём переменной-ссылки на объект, по смыслу
+-- это чьё-то поле next или голова списка, ссылку можно переориентировать
+ current ! переменная-ссылка на объект
+ current%filed ! поле объекта, на который ссылается переменная-ссылка (ср. выше в Kind)
+end
+```
