--- a/Алгоритмы_и_структуры_данных/ООП-23.11.md
+++ b/Алгоритмы_и_структуры_данных/ООП-23.11.md
@@ -1,1 +1,23 @@
+# Основы объектно-ориентированного программирования
 
+### Три столпа парадигдмы ООП
+- Инкапсуляция
+- Наследование
+- Полиморфизм
+
+### Инкапсуляция
+Инкапсуляция (encapsulation) – объединение данных
+вместе с механизмами и методами, работающими с ними, а
+также ограничение прямого доступа к данным как к
+компонентам объекта
+
+```
+CALL a%proc(x,y)
+объект a передаётся как первый параметр в процедуру proc
+● Это явно подчёркивается:
+PROCEDURE, PASS :: proc
+● Объект можно не передавать:
+PROCEDURE, NOPASS, POINTER :: p
+● Можно явно указать его название:
+PROCEDURE, PASS(arg) :: proc3
+```
