--- a/Алгоритмы_и_структуры_данных/ООП-23.11.md
+++ b/Алгоритмы_и_структуры_данных/ООП-23.11.md
@@ -21,3 +21,23 @@ PROCEDURE, NOPASS, POINTER :: p
 ● Можно явно указать его название:
 PROCEDURE, PASS(arg) :: proc3
 ```
+Пример
+```
+TYPE T
+  private
+...
+contains
+  procedure :: proc => my_proc
+  procedure :: proc2
+  GENERIC :: gen => proc3, proc4, proc5
+end type T
+
+type(T) a
+
+call a%proc(x,y)
+
+call a%gen(x,y,z) ! proc3
+call a%gen(x,y)   ! proc4
+call a%gen(x)     ! proc5
+call a%gen()      ! xxx - такую процедуру не создавали
+```
