--- a/Алгоритмы_и_структуры_данных/ООП-23.11.md
+++ b/Алгоритмы_и_структуры_данных/ООП-23.11.md
@@ -29,7 +29,7 @@ TYPE T
 contains
   procedure :: proc => my_proc
   procedure :: proc2
-  GENERIC :: gen => proc3, proc4, proc5
+  GENERIC :: gen => proc3, proc4, proc5 ! перегрузка процедуры
 end type T
 
 type(T) a
