--- a/Алгоритмы_и_структуры_данных/ООП-23.11.md
+++ b/Алгоритмы_и_структуры_данных/ООП-23.11.md
@@ -41,3 +41,32 @@ call a%gen(x,y)   ! proc4
 call a%gen(x)     ! proc5
 call a%gen()      ! xxx - такую процедуру не создавали
 ```
+
+
+```
+  1 TYPE, ABSTRACT :: FILE_HANDLE
+  2 CONTAINS
+  3    PROCEDURE (OPEN_FILE), DEFERRED, PASS :: OPEN
+  4    ...
+  5 END TYPE
+  6 ABSTRACT INTERFACE
+  7    SUBROUTINE OPEN_FILE(HANDLE)
+  8       CLASS(FILE_HANDLE), INTENT(INOUT) :: HANDLE
+  9    END SUBROUTINE OPEN_FILE
+ 10 END INTERFACE
+ 11 
+ 12 type, extends(FILE_HANDLE) :: vfs_handle
+ 13 CONTAINS
+ 14    PROCEDURE, PASS :: OPEN
+ 15 end type vfs_handle
+ 16 
+ 17 procedure Open(Handle)
+ 18    class(FILE_HANDLE), intent(inout) :: Handle
+ 19    ! type(vfs_handle), intent(inout) :: Handle
+ 20    ...
+ 21 end procedure Open
+ 22 
+ 23 type(vfs_handle) :: vfs_h
+ 24 
+ 25 vfs_h%Open 
+```
