--- a/Алгоритмы_и_структуры_данных/ООП-23.11.md
+++ b/Алгоритмы_и_структуры_данных/ООП-23.11.md
@@ -42,31 +42,42 @@ call a%gen(x)     ! proc5
 call a%gen()      ! xxx - такую процедуру не создавали
 ```
 
-
+### Отложенное связывание и абстрактные типы
+- Ситуация – ожидается, что процедура, привязанная к типу,
+будет вызываться только для потомка типа, который
+переопределяет процедуру
+- Процедура, привязанная к типу, не имеет реализации по
+умолчанию или естественной реализации, а имеет только
+четко определенную цель и интерфейс
+- Такое поведение может быть обеспечено объявлением типа
+как абстрактного, а привязки как отложенной
+- Для связанной процедуры требуется интерфейс
 ```
-  1 TYPE, ABSTRACT :: FILE_HANDLE
-  2 CONTAINS
-  3    PROCEDURE (OPEN_FILE), DEFERRED, PASS :: OPEN
-  4    ...
-  5 END TYPE
-  6 ABSTRACT INTERFACE
-  7    SUBROUTINE OPEN_FILE(HANDLE)
-  8       CLASS(FILE_HANDLE), INTENT(INOUT) :: HANDLE
-  9    END SUBROUTINE OPEN_FILE
- 10 END INTERFACE
- 11 
- 12 type, extends(FILE_HANDLE) :: vfs_handle
- 13 CONTAINS
- 14    PROCEDURE, PASS :: OPEN
- 15 end type vfs_handle
- 16 
- 17 procedure Open(Handle)
- 18    class(FILE_HANDLE), intent(inout) :: Handle
- 19    ! type(vfs_handle), intent(inout) :: Handle
- 20    ...
- 21 end procedure Open
- 22 
- 23 type(vfs_handle) :: vfs_h
- 24 
- 25 vfs_h%Open 
+TYPE, ABSTRACT :: FILE_HANDLE
+ CONTAINS
+    PROCEDURE (OPEN_FILE), DEFERRED, PASS :: OPEN
+! эквивалентно procedure :: proc => my_proc
+! DEFERRED - отложенное связывание
+    ...
+ END TYPE
+ ABSTRACT INTERFACE
+    SUBROUTINE OPEN_FILE(HANDLE)
+       CLASS(FILE_HANDLE), INTENT(INOUT) :: HANDLE
+    END SUBROUTINE OPEN_FILE
+ END INTERFACE
+ 
+ type, extends(FILE_HANDLE) :: vfs_handle
+ CONTAINS
+    PROCEDURE, PASS :: OPEN
+ end type vfs_handle
+ 
+ procedure Open(Handle)
+    class(FILE_HANDLE), intent(inout) :: Handle
+    ! type(vfs_handle), intent(inout) :: Handle
+    ...
+ end procedure Open
+ 
+ type(vfs_handle) :: vfs_h
+ 
+ vfs_h%Open 
 ```
