--- a/Алгоритмы_и_структуры_данных/ООП-23.11.md
+++ b/Алгоритмы_и_структуры_данных/ООП-23.11.md
@@ -1,11 +1,11 @@
 # Основы объектно-ориентированного программирования
 
-### Три столпа парадигдмы ООП
+## Три столпа парадигдмы ООП
 - Инкапсуляция
 - Наследование
 - Полиморфизм
 
-### Инкапсуляция
+## Инкапсуляция
 Инкапсуляция (encapsulation) – объединение данных
 вместе с механизмами и методами, работающими с ними, а
 также ограничение прямого доступа к данным как к
@@ -81,3 +81,33 @@ TYPE, ABSTRACT :: FILE_HANDLE
  
  vfs_h%Open 
 ```
+## Наследование
+Наследование (Inheritance) – это механизм базирования
+объекта на другом объекте с сохранением аналогичной
+реализации
+
+## Полиморфизм
+Полиморфизм (Polymorphism) – это предоставление
+единого интерфейса для объектов разных типов или
+использование одного символа для представления
+нескольких различных типов
+Три вида полиморфизма:
+- Ad-hoc-полиморфизм (специальный полиморфизм)
+- Параметрический полиморфизм (parametric polymorphism)
+- Полиморфизм включения (inclusion polymorphism)
+
+### Ad-hoc-полиморфизм
+- Определяет общий интерфейс для произвольного набора
+индивидуально заданных типов
+- Реализуется через переопределение процедур
+
+### Параметрический полиморфизм
+Не указывая конкретные типы, а вместо этого используя
+абстрактные символы, которые могут заменить любой тип
+
+**Обобщённое программирование (generic programming)** –
+парадигма программирования, в которой код написан в
+терминах типов, которые будут указаны позже, при этом
+описание данных и алгоритмов можно без изменений
+применять к различным типам данных
+
